--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>pgEdge Natural Language Agent</title>
     <meta name="description" content="Chat interface for PostgreSQL via pgEdge MCP Server" />
   </head>
